created a page for sports

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,29 +8,100 @@
 </head>
 
 <body>
+  <div class="main" id="home">
+    <div class="navigat">
+      <div class="logo"><img
+          src="https://dynamic.brandcrowd.com/preview/logodraft/a5e44d8d-6eb9-4050-816a-e6e2e0197f13/image/large.png"
+          alt="logo"></div>
+      <div class="parent1">
+        <div class="HOME"><a href="#home">Home</a></div>
+        <div class="SPORTS"><a href="#sports">Sports</a></div>
+        <div class="TEAMS"><a href="#teams">Teams</a></div>
+        <div class="LEAGUES"><a href="#leagues">Leagues</a></div>
+        <div class="SIGNIN"><a href="#signin">sign in</a></div>
 
-  <div class="navigat">
-    <div class="logo"><img
-        src="https://dynamic.brandcrowd.com/preview/logodraft/a5e44d8d-6eb9-4050-816a-e6e2e0197f13/image/large.png"
-        alt="logo"></div>
-    <div class="parent1">
-      <div class="link1"><a href="#home">Home</a></div>
-      <div class="link2"><a href="#sports">Sports</a></div>
-      <div class="link3"><a href="#teams">Teams</a></div>
-      <div class="link4"><a href="#leagues">Leagues</a></div>
-      <div class="link5"><a href="#signin">sign in</a></div>
+      </div>
+    </div>
 
+    <div class="design">
+      <div class="div1"><b>SPORTZ DESIGN</b></div>
+      <div class="div2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend tempus ultrices. Cras
+        vehicula gravida erat a accumsan. Vivamus vel nisl odio. Suspendisse sed ex ac purus elementum ullamcorper vel
+        et
+        magna. Maecenas vel nisl non tortor ultrices pellentesque. Maecenas fringilla porta semper. Morbi porttitor
+        finibus ornare.
+      </div>
+      <div class="div3"><a href="#register"> Register</a>
+      </div>
     </div>
   </div>
+  <section class="sports" id="sports">
+    <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sodales, arcu sit
+      amet elementum bibendum, sapien odio volutpat sem, eu ullamcorper ante metus a orci. Proin convallis lectus quis
+      ante mollis, quis vehicula risus varius. Nam vel odio libero. Ut non vulputate risus, id auctor nibh. Sed ante
+      sapien, laoreet nec fermentum sit amet, pharetra a ex. Proin ultricies eros felis, ut rutrum leo tempus in. In
+      aliquet metus at justo vestibulum, nec eleifend mauris dictum. Morbi pulvinar augue id magna pulvinar, eu
+      pulvinar
+      ante congue.
 
-  <div class="design">
-    <div class="div1"><b>SPORTZ DESIGN</b></div>
-    <div class="div2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend tempus ultrices. Cras
-      vehicula gravida erat a accumsan. Vivamus vel nisl odio. Suspendisse sed ex ac purus elementum ullamcorper vel et
-      magna. Maecenas vel nisl non tortor ultrices pellentesque. Maecenas fringilla porta semper. Morbi porttitor
-      finibus ornare.
+      Vivamus lacus orci, maximus vel iaculis quis, tempus ut ipsum. Aenean viverra est tortor, in vestibulum eros
+      auctor quis. Mauris vehicula lacus ultrices odio ornare, quis dapibus massa consectetur. Aliquam pharetra dui id
+      risus sodales congue. Pellentesque varius, lorem eu luctus tristique, orci odio aliquam nisl, tempor iaculis
+      libero diam non purus. Integer sollicitudin vehicula eros in fermentum. Suspendisse euismod arcu vitae orci
+      fringilla venenatis. Etiam commodo id ligula vitae mollis. Pellentesque pulvinar enim at auctor tempor. Nunc
+      congue libero enim, vitae luctus leo tempus et. Donec iaculis scelerisque elit ac hendrerit. Etiam consequat
+      ornare quam eu commodo. Phasellus fringilla eu lorem vitae varius.
+
+      In non venenatis elit, sed rutrum orci. Aliquam faucibus pharetra tincidunt. Vivamus interdum molestie turpis
+      sed
+      auctor. Vivamus nec consectetur magna, ut posuere dolor. Proin sed iaculis lectus, id feugiat justo.
+      Pellentesque
+      sit amet enim consectetur enim cursus dignissim. Sed eget placerat sapien. Vivamus mattis posuere lorem. Sed
+      placerat pretium purus, vitae pretium sapien convallis vel. Aenean velit diam, commodo id sapien a, elementum
+      sollicitudin leo. Mauris luctus sapien ut pretium gravida. In hac habitasse platea dictumst. Donec maximus felis
+      et risus porttitor ultrices. Maecenas id consectetur libero. Nunc cursus velit ac libero egestas luctus.
+      Praesent
+      sodales pretium est nec consequat.
+
+      Ut scelerisque nunc quis egestas rhoncus. Quisque mattis vestibulum blandit. Nulla quis velit molestie,
+      efficitur
+      nulla ut, fringilla mi. Vivamus id tristique nulla, sed congue urna. Nam eu mattis purus. Vivamus sit amet neque
+      nisl. Quisque ultricies justo sapien, id euismod felis sollicitudin in. Nam ac accumsan lorem. Sed pretium arcu
+      quis ante lacinia, eu scelerisque risus lobortis. Nunc et feugiat augue.
     </div>
-    <div class="div3"><a href="#register"> Register</a>
-  </div>
+  </section>
+  <section class="teams" id="teams">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel lorem id purus viverra consectetur vitae vel
+    nisl. Nunc consequat urna magna, at viverra elit lacinia sed. Aenean et nunc quis eros viverra consectetur.
+    Vestibulum laoreet eros quis molestie sagittis. Quisque ornare lorem lorem, sit amet rhoncus elit congue feugiat.
+    Nullam eu risus at ante interdum molestie eget a dui. Donec neque sapien, ullamcorper non vestibulum ut, rutrum sed
+    purus. Fusce condimentum libero et purus porta, vitae commodo sem hendrerit. Quisque at pharetra libero. Lorem ipsum
+    dolor sit amet, consectetur adipiscing elit. Cras eget mollis augue, quis bibendum sapien. Mauris porttitor vitae
+    augue at condimentum. Ut eu nibh eget lorem maximus scelerisque. Donec felis dui, accumsan sed ante ut, tincidunt
+    auctor turpis. Quisque vitae finibus massa.
 
+    Maecenas convallis aliquam elit eu vulputate. Donec sed tellus quam. Proin commodo dictum neque, ut aliquam lectus
+    commodo eget. Pellentesque ac erat commodo, hendrerit eros a, aliquam mi. Nam tincidunt posuere auctor. Etiam at
+    sapien ut justo aliquam laoreet. Nulla condimentum lacinia dui, eget vestibulum nunc pulvinar ut. Vestibulum
+    tristique mi ac sapien finibus interdum. Nam viverra ligula vitae malesuada viverra. Morbi fermentum posuere turpis
+    sed euismod.
+
+    Aenean convallis, justo id varius convallis, eros ipsum condimentum nibh, ut ultricies massa tellus non eros. Nam
+    sit amet erat laoreet, cursus nisl eu, scelerisque tortor. Nunc varius, odio ac maximus convallis, urna ligula porta
+    diam, et efficitur tellus lorem in ante. Nulla ac tincidunt mi. Cras ultricies urna vitae metus sagittis elementum.
+    Sed molestie tincidunt odio, a viverra quam ultricies sit amet. Sed arcu diam, pharetra et ipsum vitae, consectetur
+    ullamcorper justo. Etiam vehicula enim nec tempus lacinia. Proin quis lacus sit amet ligula euismod dictum. Morbi
+    nec cursus dolor, at placerat nisl. Sed pretium mattis imperdiet. Proin ac ultricies lacus.
+
+    Integer tincidunt, lorem in mattis pharetra, elit lorem interdum turpis, quis malesuada lorem nisl id tortor. Nullam
+    ac augue felis. Vestibulum in augue quis est maximus lobortis vel vel nisl. Praesent sit amet aliquam ex. Nulla
+    facilisi. Sed tincidunt placerat est a pretium. Curabitur dapibus nunc at convallis sagittis. Quisque vel rhoncus
+    lacus.
+
+    Mauris ut elementum purus. Morbi nibh lorem, malesuada vitae rhoncus sed, sagittis ac tellus. Praesent consequat
+    iaculis mauris, vel venenatis arcu auctor in. Curabitur sollicitudin dapibus orci ut ultrices. Curabitur eget elit
+    vulputate, aliquam mi eu, pretium orci. Quisque porta, ex ac condimentum porta, sem sem vulputate lorem, sed rutrum
+    lectus ante nec felis. Pellentesque mi massa, consequat ut est quis, dignissim molestie nisi. Nulla sodales nibh nec
+    molestie auctor. Nulla vel neque ipsum.
+  </section>
 </body>
