created page for leagues and made some changes to the landing page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,20 +8,21 @@
 </head>
 
 <body>
-  <div class="main" id="home">
-    <div class="navigat">
-      <div class="logo"><img
-          src="https://api.logo.com/api/v2/images?logo=logo_d587447d-e6be-4d16-b8ba-f3e426466a96&format=webp&margins=0&quality=60&width=500&background=transparent&u=1661344158"
-          alt="logo"></div>
-      <div class="parent1">
-        <div class="HOME"><a href="#home">Home</a></div>
-        <div class="SPORTS"><a href="#sports">Sports</a></div>
-        <div class="TEAMS"><a href="#teams">Teams</a></div>
-        <div class="LEAGUES"><a href="#leagues">Leagues</a></div>
-        <div class="SIGNIN"><a href="#signin">sign in</a></div>
+  <div class="navigat">
+    <div class="logo"><img
+        src="https://api.logo.com/api/v2/images?logo=logo_d587447d-e6be-4d16-b8ba-f3e426466a96&format=webp&margins=0&quality=60&width=500&background=transparent&u=1661344158"
+        alt="logo"></div>
+    <div class="parent">
+      <div class="HOME"><a href="#home">Home</a></div>
+      <div class="SPORTS"><a href="#sports">Sports</a></div>
+      <div class="RULES"><a href="#rules">Rules</a></div>
+      <div class="LEAGUES"><a href="#leagues">Leagues</a></div>
+      <div class="SIGNIN"><a href="#signin">sign in</a></div>
 
-      </div>
     </div>
+  </div>
+  <section class="main" id="home">
+    
 
     <div class="design">
       <div class="div1"><b>SPORTZ DESIGN</b></div>
@@ -34,9 +35,10 @@
       <div class="div3"><a href="#register"> Register</a>
       </div>
     </div>
-  </div>
+  </section>
   <section class="sports" id="sports">
-    <div class="sportss"> <h1><b>EXAMPLES OF SPORTS</b></h1>
+    <div class="sportss">
+      <h1><b>EXAMPLES OF SPORTS</b></h1>
     </div>
     <div class="sportcards">
       <div class="basketball">
@@ -86,8 +88,9 @@
       <div class="swimming">
         <div class="swimming-card">
           <div class="swimming-card-inner">
-            <div class="swimming-card-front"><img src="data:image/jpeg;base64,/9j…0UU0iiMSxopQSjCNFAFFFFKD//Z" alt="swimming">
-                </div>
+            <div class="swimming-card-front"><img src="data:image/jpeg;base64,/9j…0UU0iiMSxopQSjCNFAFFFFKD//Z"
+                alt="swimming">
+            </div>
             <div class="swimming-card-back">
               <h1>SWIMMING</h1>
               <p>swimming, in recreation and sports, the propulsion of the body through water by combined arm and leg
@@ -98,72 +101,133 @@
       </div>
     </div>
   </section>
-  <section class="teams" id="teams">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel lorem id purus viverra consectetur vitae vel
-    nisl. Nunc consequat urna magna, at viverra elit lacinia sed. Aenean et nunc quis eros viverra consectetur.
-    Vestibulum laoreet eros quis molestie sagittis. Quisque ornare lorem lorem, sit amet rhoncus elit congue feugiat.
-    Nullam eu risus at ante interdum molestie eget a dui. Donec neque sapien, ullamcorper non vestibulum ut, rutrum sed
-    purus. Fusce condimentum libero et purus porta, vitae commodo sem hendrerit. Quisque at pharetra libero. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Cras eget mollis augue, quis bibendum sapien. Mauris porttitor vitae
-    augue at condimentum. Ut eu nibh eget lorem maximus scelerisque. Donec felis dui, accumsan sed ante ut, tincidunt
-    auctor turpis. Quisque vitae finibus massa.
+  <section class="rules" id="rules">
+    <h1>Sports Rules</h1>
+    <u> these are the rules of the sports listed above;</u>
+    <div class="basketball-rules">
+      <h3>Rules of Basketball</h3>
 
-    Maecenas convallis aliquam elit eu vulputate. Donec sed tellus quam. Proin commodo dictum neque, ut aliquam lectus
-    commodo eget. Pellentesque ac erat commodo, hendrerit eros a, aliquam mi. Nam tincidunt posuere auctor. Etiam at
-    sapien ut justo aliquam laoreet. Nulla condimentum lacinia dui, eget vestibulum nunc pulvinar ut. Vestibulum
-    tristique mi ac sapien finibus interdum. Nam viverra ligula vitae malesuada viverra. Morbi fermentum posuere turpis
-    sed euismod.
+      <div class="list">
+        <p>1.<b>Only five players per team on the court.</b> </p>
+        <p>2.<b>Score more than your opponent to win.</b></p>
+        <p>3.<b>Score within the shot clock.</b></p>
+        <p>4.<b>Dribbling advances the ball</b></p>
+        <p>5.<b>The offense has five seconds to rebound the ball</b></p>
+        <p>6.<b>The offense must advance the ball</b></p>
+        <p>7.<b>Ball and ball handler must remain inbounds</b></p>
+        <p>8<b>Defenders can't interfere with a shot on a downward trajectory</b></p>
+        <p>9.<b>Defenders can legally block or steal the ball</b></p>
+        <p>10.<b>Defenders must leave the paint after three seconds</b></p>
+        <p>11.<b>Each team is alloted a certain numebr of fouls</b></p>
+        <p>12.<b>Illegal contact results in foul</b></p>
+        <p>13.<b>Illegal contact results in personal foul</b></p>
+        <p>14.<b>Excessive contact results in a flagrant foul</b></p>
+        <p>15.<b>Charges and illegal screens result in an offensive foul </b></p>
+      </div>
+    </div>
+    <div class="soccer-rules">
+      <h3>Rules of Soccer</h3>
+      <div class="list">
+        <p>1.<b>No hands</b>
+          Unless you're a goal-keeper or attempting a throw-in, youre not allowed to use your hands in play</p>
+        <p>2.<b>Throw-ins</b>
+          when the ball crosses the sideline going out of bounds a throw-in is taken by a member of the team who didnt
+          kick the ball out</p>
+        <p>3.<b>Goal Kicks</b>
+          If the offensive team kicks the ball out behind the goal line, the defensive team takes a goal kick from
+          inside the goal box</p>
+        <p>3.<b>Corner kicks</b>
+          If the defensive team kicks the ball out behind the goal line, the offensive team takes a corner kick from the
+          corner nearest to where the ball left the field</p>
 
-    Aenean convallis, justo id varius convallis, eros ipsum condimentum nibh, ut ultricies massa tellus non eros. Nam
-    sit amet erat laoreet, cursus nisl eu, scelerisque tortor. Nunc varius, odio ac maximus convallis, urna ligula porta
-    diam, et efficitur tellus lorem in ante. Nulla ac tincidunt mi. Cras ultricies urna vitae metus sagittis elementum.
-    Sed molestie tincidunt odio, a viverra quam ultricies sit amet. Sed arcu diam, pharetra et ipsum vitae, consectetur
-    ullamcorper justo. Etiam vehicula enim nec tempus lacinia. Proin quis lacus sit amet ligula euismod dictum. Morbi
-    nec cursus dolor, at placerat nisl. Sed pretium mattis imperdiet. Proin ac ultricies lacus.
+        <p>4.<b>Game in play</b>
+          So long as the ball is on the field inside of bounds, the game is considered in play</p>
+        <p>5.<b>Fouls</b>
+          It's the refree's responsibility to monitor the safe play and fouls, but in general, the intent is ti go for
+          the
+          ball, not the player</p>
+      </div>
+    </div>
+    <div class="tennis-rules">
+      <h3>Rules of Tennis</h3>
+      <div class="list">
+        <p><b>.</b> The game starts with a coin toss to determine which player must serve first and which side the want
+          to serve from</p>
+        <p><b>.</b> The server must then serve each point from altrnative sides on the base line.</p>
+        <p><b>.</b> At no point must the server's feet move in front of the baseline on the court prior to hitting the
+          serve.</p>
+        <p><b>.</b> If the server fails to get the first serve in, they may take advantage of the second serve. If they
+          again fail to get their second serve in then a double fault will be called and the point lost.</p>
+        <p><b>.</b> If he server clips the net but the ball goes in the service area still then let is called and they
+          get to take the serve againwithout penalty. if the ball hits the net and fails to go in the service area then
+          out is called and they lose that serve</p>
+          <p><b>.</b> The receiver may stand where they wish upon the receipt of the serve. If the ball is struck withtout the serve bouncing then the server will receive the point.</p>
+          <p><b>.</b> Once a serve has been made, the amount of shots between the players can be unlimited. The point is won by hitting  the ball so the opponent fails to return it to the scoring areas. </p>
+          <p><b>.</b> Points are awarded in scores of 15,30 and 40. 15 represents 1 point, 30 = 2 and 40 = 3.</p>
+          <p><b>.</b> You need 4 points to win a game. If a game land on 40-40, it's known as deuce. From deuce a player needs to win 2 consecutive points to win the game. After winning one point from the deuce, the player is on advantage. If the player wins the next point, they win the game, if they lose it goes back to deuce.</p>
+          <p><b>.</b> To win the set a player must win 6 games by 2 or more. The opening sets will go to a tie break if it end up 6-6 where player play first to 7 points. The final set will not have a tie break and requires players to win by two games with no limits.</p>
+          <p><b>.</b> If a player touches the net, distracts his opponent or impedes in any way then they automatically lose the point</p>
+          <p><b>.</b> The ball can hit any part of the line for the point to be called in, outside the line and the ball is out</p>
+          <p><b>.</b> The balls in a tennis match are changed for new balls every 6 games</p>
+          <p><b>.</b> A player loses a point if they fail to return the ball in either the correct areas on the court, hits the net and doesn't go into opponent's area or fails to return the ball before it bounces twice in their half </p>
+      </div>
 
-    Integer tincidunt, lorem in mattis pharetra, elit lorem interdum turpis, quis malesuada lorem nisl id tortor. Nullam
-    ac augue felis. Vestibulum in augue quis est maximus lobortis vel vel nisl. Praesent sit amet aliquam ex. Nulla
-    facilisi. Sed tincidunt placerat est a pretium. Curabitur dapibus nunc at convallis sagittis. Quisque vel rhoncus
-    lacus.
+    </div>
+    <div class="swimming-rules">
+      <h3>Rules of Swimming</h3>
+      <div class="list">
+<p>. Swimmers cannot start swimming or moving before the starting signal or buzzer. Doing so will be a false start and the offender will get disqualified</p>
+<p>. A disqualification can occur before the starting signal goes off. In this case the starting signal will not get given. The remaining swimmers will get recalled and the race starts again</p>
+<p>. As a rule, competitors may not walk during a race. but they can stand (for resting) during a freestyle race or a Freestyle leg of a Medley race</p>
+<p>. Each swimmer must make physical contact with the end of the pool of course when turning in all races.</p>
+<p>. The turn must get made from the wall and is not permitted  to take a stride or step from the bottom of the pool.</p>
+<p>. After completing the race swimmers must remain in the water and in their own lane. They must wait in their lane until the refree (or other official authorized by him) releases them.
+<p>. The rules if swimming disqualify any swimmer who starts before the signal. The refree observes it and will confirm the starter's observation of the violation.</p>
+<p>. The starting signal may sound off before the disqualificationgets declared . In this case the race would continue. The swimmer or swimmers will get disqualified on completion of the race</p>
+<p>. No swimmer gets charged with a false start if a recall signal sounds off inadvertently. If a swimmer responds to the '<b>stand up'</b> command and gets charged with a false start, he may get rleived of the charge. </p>
+<p>. The starter must correct a swimmer for any illegal starting position. If not, the swimmer cannot get disqualified.</p>
+<p>. Any swimmer may notify the refree '<b>before the race</b>' of his intent not to compete. In this case he will get disqualified as a declared false start.</p>
 
-    Mauris ut elementum purus. Morbi nibh lorem, malesuada vitae rhoncus sed, sagittis ac tellus. Praesent consequat
-    iaculis mauris, vel venenatis arcu auctor in. Curabitur sollicitudin dapibus orci ut ultrices. Curabitur eget elit
-    vulputate, aliquam mi eu, pretium orci. Quisque porta, ex ac condimentum porta, sem sem vulputate lorem, sed rutrum
-    lectus ante nec felis. Pellentesque mi massa, consequat ut est quis, dignissim molestie nisi. Nulla sodales nibh nec
-    molestie auctor. Nulla vel neque ipsum.
+      </div>
+    </div>
+  </section>
+
+
+  </div>
   </section>
   <section class="leagues" id="leagues">
-    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id posuere turpis, vel auctor est. Aenean
-      fringilla sagittis pulvinar. Quisque in euismod mauris, id faucibus ipsum. Proin sodales neque in neque ultrices
-      feugiat. Curabitur efficitur mollis mauris at accumsan. Donec fermentum eget tellus quis vestibulum. Ut vehicula,
-      eros non lacinia accumsan, neque orci mattis diam, a luctus lacus metus a lorem. Nunc dictum, lorem vel porttitor
-      suscipit, elit est vulputate tortor, eu fermentum libero ligula non enim. Vivamus ullamcorper arcu ullamcorper sem
-      lacinia tempor. Donec ultrices blandit arcu, ac pulvinar turpis vulputate sed. Orci varius natoque penatibus et
-      magnis dis parturient montes, nascetur ridiculus mus. Fusce mollis nulla vel leo semper vulputate. Curabitur
-      interdum libero ut blandit auctor. Nam feugiat eget tellus sed tristique. Ut hendrerit blandit vehicula.
-
-      Etiam vehicula scelerisque lorem scelerisque dapibus. Sed ultricies quam tristique ex maximus vestibulum. Aliquam
-      vel nunc in ex eleifend pulvinar id sit amet lacus. Aliquam volutpat cursus velit vitae rhoncus. Curabitur
-      malesuada id mi id iaculis. Vivamus ac iaculis nibh, et facilisis ante. Donec ultricies, diam ac viverra
-      scelerisque, mauris metus maximus purus, sed molestie urna neque quis nunc. In vitae urna diam. Sed ullamcorper,
-      nibh et tincidunt vehicula, elit metus pretium leo, vel porta est ligula a purus. Ut eu suscipit odio. Maecenas
-      nec consequat lorem. Donec euismod varius purus ac consectetur. Proin laoreet nunc magna, sed sagittis velit
-      ornare vitae. Proin tincidunt, lorem quis convallis ornare, eros urna maximus mauris, quis volutpat elit leo sit
-      amet nisl. Suspendisse lobortis eu nisl ut interdum.
-
-      Etiam dictum eget urna feugiat viverra. Praesent eget tincidunt felis. Cras iaculis pharetra urna, sit amet
-      pretium lacus facilisis quis. Nullam euismod varius purus nec luctus. Pellentesque egestas neque eu arcu vehicula
-      tempor. Vestibulum eget eros porttitor, auctor metus nec, facilisis risus. Etiam sapien diam, ultrices ac dolor
-      sed, consequat finibus turpis. Sed vitae dapibus purus. Cras ac ornare sapien. Vestibulum efficitur vulputate
-      turpis, sed accumsan turpis congue vitae. Praesent velit eros, maximus nec velit quis, sollicitudin consequat
-      lacus. Quisque volutpat aliquam sem, volutpat vestibulum est venenatis in. Integer ultricies enim nec neque
-      tincidunt, et mattis turpis tristique. In varius ipsum in mattis posuere.
-
-      Cras dolor elit, aliquet sit amet nisi vel, sollicitudin tristique turpis. Pellentesque tempus, leo nec ultrices
-      tempor, mi massa gravida sapien, ac vestibulum leo odio at risus. Phasellus euismod sit amet velit in lacinia.
-      Nunc maximus molestie ante, sed vulputate mi finibus non. Nullam consequat ante at mauris semper, ut condimentum
-      sem porttitor. Fusce nunc nunc, consequat ut tellus a, fermentum accumsan nisl. Mauris non nulla porta, posuere
-      erat nec, accumsan ante.
+    <div class="basketball-leagues">
+      <h3>Basketball Leagues</h3>
     </div>
+    <div class="list">
+      <p>NBA</p>
+      <p>FIBA</p>
+      <p>EuroLeague</p><p>The Basketball League</p><p>Chinese Basketball Association</p><p>National Baketball league</p><p><a href="https://en.wikipedia.org/wiki/List_of_basketball_leagues">e.t.c</a></p>
+    </div>
+    <div class="soccer-leagues">
+      <h3>Soccer Leagues</h3>
+    </div>
+    <div class="list">
+      <p>Premier League</p>
+      <p>EUFA Europa League</p>
+      <p>English Football League</p><p>EUFA Champions League</p><p>World Cup</p><p>LaLiga</p><p>Bundesliga</p><p>Serie A</p><p><a href="https://www.footballhistory.org/league/index.html">e.t.c</a></p>
+    </div>
+    <div class="tennis-leagues">
+      <h3>Tennis Leagues</h3>
+    </div>
+    <div class="list">
+      <p>Wimbledon</p>
+      <p>International Premier Tennis League</p>
+      <p>The US Open (Tennis)</p><p>World Team Tenniss</p><p>Natiuonal Tennis League</p><p>ATP Tour</p><p><a href="https://www.google.com/search?q=tennis+leagues&oq=tennis+leagues&aqs=chrome..69i57j0i512l5j46i512j0i512l3.9879j0j9&sourceid=chrome&ie=UTF-8">e.t.c</a></p>
+    </div>
+    <div class="swimming-leagues">
+      <h3>Swimming Leagues</h3>
+    </div>
+    <div class="list">
+      <p>Indian Super League</p><p>Swim England</p>
+      <p>FINA</p><p>Six Nations Championship</p>
+      <p>USA swimming</p><p>Omega SA</p><p><a href="https://en.wikipedia.org/wiki/List_of_swimming_competitions">e.t.c</a></p>
+    </div>
+
   </section>
 </body>
