--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -17,7 +17,7 @@
       <div class="SPORTS"><a href="#sports">Sports</a></div>
       <div class="RULES"><a href="#rules">Rules</a></div>
       <div class="LEAGUES"><a href="#leagues">Leagues</a></div>
-      <div class="SIGNIN"><a href="#signin">sign in</a></div>
+      <div class="SIGNIN"><a href="./signin-form.html">sign in</a></div>
 
     </div>
   </div>
