--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>landing page for first project</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./frontend/index.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <div class="SPORTS"><a href="#sports">Sports</a></div>
       <div class="RULES"><a href="#rules">Rules</a></div>
       <div class="LEAGUES"><a href="#leagues">Leagues</a></div>
-      <div class="SIGNIN"><a href="./signin-form.html">sign in</a></div>
+      <div class="SIGNIN"><a href="./frontend/signin-form.html">sign in</a></div>
 
     </div>
   </div>
